fix: block properties font size too big in light theme

--- a/src/mix.less
+++ b/src/mix.less
@@ -19,9 +19,11 @@
   border-bottom-width: 4px;
 }
 
+.block-properties {
+  font-size: small;
+}
 .dark-theme {
   .block-properties {
-    font-size: small;
     background-color: var(--ls-secondary-background-color);
   }
 }
